# jetson-nano-object-following-in-cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  my-recognition  notes.txt  startFollowing.sh  vGLstartFollowing.sh
arduinoFiles/cppFollowingRobot/: cppFollowingRobot.ino  revieveEvent.ino
src/: constants.h  detectnet.cpp  everyThingIDontWantToDealWith.h
src/followBottle/: driveRobot.cpp  findClosest.cpp  floatToInt.cpp  followBottle.h  initI2C.cpp  intToFloat.cpp  intToInt.cpp  motorDrive.cpp
